# Autonomous-and-Mobile-Robotics-project

./: README.md  infoKevin
casa_marco/: model.config  model.sdf
devel/: .catkin  setup.sh
devel/include/gmcl/: GMCLConfig.h
devel/lib/explore_lite/: explore
devel/lib/gmcl/: gmcl
devel/lib/multirobot_map_merge/: map_merge
devel/lib/pkgconfig/: explore_lite.pc  first_task.pc  gmcl.pc  multirobot_map_merge.pc  pacchetto1.pc  prova_laser.pc  robot_localization.pc  second_task.pc  send_goal.pc  task3.pc  third_task.pc  turtlebot3_big_house.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
devel/lib/robot_localization/: ekf_localization_node  navsat_transform_node  robot_localization_listener_node  test_ros_robot_localization_listener_publisher  ukf_localization_node
devel/lib/send_goal/: localization_try.py  send_goal.py
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_example/: turtlebot3_client  turtlebot3_illumination  turtlebot3_obstacle  turtlebot3_pointop_key
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
src/: nodo_clean.py  prova_ale_nodo_clean.py
src/fourth_task/: CMakeLists.txt  package.xml
src/laser_value/: CMakeLists.txt  package.xml
src/prova_laser/: CMakeLists.txt
src/second_task/: CMakeLists.txt  package.xml
src/second_task/launch/: second_task.launch  second_task1.launch
src/third_task/: CMakeLists.txt  package.xml
(+62 files in other folders)
